Added FitText, FontAwesome. Various additions/modifications to index.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,31 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<!-- <h1 data-fittext>Hi. Im Allen.</h1> -->
+<div class="content-block col-sm-6">
+  <h4>Creative title</h4>
+  <div>
+    Nullam egestas dolor vitae tellus malesuada, ac finibus magna vestibulum. In lacinia sem eget porta facilisis. Fusce ante odio, accumsan id ex at, convallis aliquet ipsum. Aliquam erat volutpat. Fusce mattis dignissim venenatis. Ut nec ultricies mi, tincidunt ultricies diam. Aenean eget tempor ex. Maecenas tincidunt commodo lorem.
+  </div>
 </div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="content-block col-sm-2 latest-blog">
+  <h4>Entry One</h4>
+  <div>
+    Praesent sapien lacus, sodales et ligula eu, congue ornare nisl. Nullam cursus scelerisque ultricies.
+  </div>
+</div>
+<div class="content-block col-sm-2 latest-blog">
+  <h4>Entry Two</h4>
+  <div>
+    Ut sed purus fringilla, ornare magna eu, hendrerit quam.
+  </div>
+</div>
+<div class="content-block col-sm-2 latest-blog">
+  <h4>Entry Three</h4>
+  <div>
+    Ut sollicitudin, mauris id ornare congue, lorem risus vulputate ex, non congue ligula velit vitae purus.
+  </div>
+</div>
+<div class="content-block col-sm-4">
+  <h4>Piece of Portfolio</h4>
+  <div>
+    Aenean eget tempor ex. Maecenas tincidunt commodo lorem. Praesent sapien lacus, sodales et ligula eu, congue ornare nisl. Nullam cursus scelerisque ultricies.
+  </div>
 </div>
